fix scroll issue for home page on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,12 @@
+#homeMobileContainer{
+    display: none;
+}
+
+#homeForMobile{
+  position: absolute;
+  width: 100%;
+}
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -463,5 +472,21 @@ position:fixed;display:block;  z-index:9999; width:280px; height:60px; backgroun
 #Scene{
 display:none;
 }
+body{
+  overflow: scroll;
+}
+
+
+  #homeMobileContainer{
+    display: inline;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+  }
+
+  .socialTab{
+   display: none;
+  }
    
 }
