--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -6,7 +6,7 @@
 
 body{
         margin:0px;
-position: relative;
+/*position: relative;*/
     }
 
 .shows_view{
